--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="#">Quiz</a>
+                <a class="nav-link" href="quiz.html">Quiz</a>
 
             </div>
         </div>
