--- a/quiz.html
+++ b/quiz.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="quiz.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
-    
+
     <title>The Chum Buckets</title>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -155,9 +155,14 @@
             </div>
         </div>
 
+        <div class="container">
+            <div class="result">
+                <h2 id="result">Your result is...</h2>
+            </div>
 
-        <div class="result">
-            <h2 id="result">Your result is...</h2>
+            <div class="restart">
+                <button id="restart">Restart Quiz</button>
+            </div>
         </div>
 
         <!-- Optional JavaScript -->
