--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             character you most resemble. </p>
         <p class="card-text"><small class="text-muted">-Tsion Tessema, Sofia Koubry, Isabel Cardoso, Oorja
                 Mishra</small></p>
+                <a class="btn btn-outline-primary" href="quiz.html" role="button">Quiz</a>
     </div>
 
 
